--- a/case2.html
+++ b/case2.html
@@ -9,10 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://www.fileformat.com/templates/fileformat/favicon.ico" rel="shortcut icon"
     type="image/vnd.microsoft.icon" />
-  <link href="assets/css/bootstrap-icons.css" rel="stylesheet">
-  <link href="assets/css/bootstrap.min.css" rel="stylesheet">
-  <link href="assets/css/menu_ui.css" rel="stylesheet">
-  <link href="assets/css/fileformat.css" rel="stylesheet">
+  <link href="assets/css/all.css" rel="stylesheet">
 
 </head>
 
