--- a/case3.html
+++ b/case3.html
@@ -10,6 +10,7 @@
   <link href="https://www.fileformat.com/templates/fileformat/favicon.ico" rel="shortcut icon"
     type="image/vnd.microsoft.icon" />
     <link href="assets/css/all.css" rel="stylesheet">
+  <link  rel="preload" as="style"  rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@300;400;500;600;700&display=swap" type="text/css" />
 </head>
 
 
