--- a/case2.html
+++ b/case2.html
@@ -10,6 +10,9 @@
   <link href="https://www.fileformat.com/templates/fileformat/favicon.ico" rel="shortcut icon"
     type="image/vnd.microsoft.icon" />
     <link href="assets/css/all.css" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Encode+Sans+Semi+Condensed:wght@100;200;300;400&family=Red+Hat+Display:wght@300;400;500;600&display=swap" rel="stylesheet">
 </head>
 
 
