--- a/case1.html
+++ b/case1.html
@@ -7,6 +7,7 @@
   <title>Free FileFormat Apps - Process MS Word | PDF | Excel | PPT online</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="ROBOTS" content="NOINDEX, NOFOLLOW">
   <link href="https://www.fileformat.com/templates/fileformat/favicon.ico" rel="shortcut icon"
     type="image/vnd.microsoft.icon" />
     <link href="assets/css/all.css" rel="stylesheet">
