--- a/case2.html
+++ b/case2.html
@@ -80,7 +80,7 @@
                     <input class="form-check-input" type="radio" name="radio" id="radio1" checked="checked">
                     <label class="form-check-label" for="radio1">Custom range</label>
                   </div>
-                  <div class="form-checkbox">
+                  <div class="form-checkbox f-encs">
                     <input class="form-check-input" type="radio" name="radio" id="radio2">
                     <label class="form-check-label" for="radio2" checked>Fixed range</label>
                   </div>
