--- a/case2.html
+++ b/case2.html
@@ -191,7 +191,7 @@
                       checked="checked">
                     <label class="form-check-label" for="radio3">Extract all pages</label>
                   </div>
-                  <div class="form-checkbox">
+                  <div class="form-checkbox f-encs">
                     <input class="form-check-input" type="radio" name="inlineRadioOptions" id="radio4">
                     <label class="form-check-label" for="radio4" checked>Select Pages</label>
                   </div>
