--- a/case2.html
+++ b/case2.html
@@ -193,7 +193,7 @@
                   </div>
                   <div class="form-checkbox f-encs">
                     <input class="form-check-input" type="radio" name="inlineRadioOptions" id="radio4">
-                    <label class="form-check-label" for="radio4" checked>Select Pages</label>
+                    <label class="form-check-label" for="radio4" checked>Select pages</label>
                   </div>
                 </div>
               </div>
